<resources>

    <string name="app_name">StateParkApp</string>
    <string name="utah_dnr">UTAH DEPARTMENT OF NATURAL RESOURCES - STATE PARKS</string>

<!--    Detail screen categories-->
    <string name="known_for">Known for:</string>
    <string name="acreage">Acreage:</string>
    <string name="yearly_visitors">Yearly visitors:</string>
    <string name="elevation">Elevation:</string>
    <string name="year_established">Year established:</string>
    <string name="park_rating">Park rating:</string>
    <string name="county">County:</string>

<!--    Buttons-->
    <string name="button_reserve">RESERVE</string>
    <string name="button_menu_state_park_name">State Park Name</string>
    <string name="button_home_screen_parks">Parks</string>
    <string name="button_home_screen_activities">Activities</string>
    <string name="button_home_screen_resources">Resources</string>
    <string name="button_home_screen_programs">Programs</string>
    <string name="button_home_screen_pay">Pay</string>
    <string name="button_park_detail_screen_back">Back</string>
    <string name="button_maps_detail_screen">Map</string>

<!--    Content Descriptions-->
    <!--    Buttons-->
    <string name="button_reserve_description">Reservations button</string>
    <string name="button_parks_description">Parks menu</string>
    <string name="button_activities_description">Activities menu</string>
    <string name="button_resources_description">Resources menu</string>
    <string name="button_programs_description">Programs menu</string>
    <string name="button_pay_description">Pay button</string>
    <string name="button_home_screen_facebook_description">Facebook button</string>
    <string name="button_home_screen_twitter_description">Twitter button</string>
    <string name="button_home_screen_youtube_description">YouTube button</string>
    <string name="button_park_detail_screen_back_description">Go back to park list</string>
    <string name="button_maps_detail_screen_description">Show this park on a map</string>

    <!--    Images-->
    <string name="image_home_screen_description">State park picture</string>
    <string name="image_parks_screen_description">State park picture</string>
    <string name="image_reserve_screen_description">State park picture</string>
    <string name="image_activities_screen_description">State park picture</string>
    <string name="image_resources_screen_description">State park picture</string>
    <string name="image_programs_screen_description">State park picture</string>
    <string name="image_pay_screen_description">State park picture</string>

    <!--    Maps-->
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
</resources>