<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.stateparkapp.view_model.ParkDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--        Strings-->

        <TextView
            android:id="@+id/string_known_for"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/known_for"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/string_county"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/county"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_known_for" />

        <TextView
            android:id="@+id/string_year_established"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/year_established"
            app:layout_constraintEnd_toStartOf="@+id/barrier_stats"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_county" />

        <TextView
            android:id="@+id/string_elevation"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/elevation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_year_established" />

        <TextView
            android:id="@+id/string_acreage"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/acreage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_elevation" />

        <TextView
            android:id="@+id/string_yearly_visitors"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/yearly_visitors"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_acreage" />

        <TextView
            android:id="@+id/string_park_rating"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_double"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/park_rating"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_yearly_visitors" />

        <!--        TextView Content-->

        <TextView
            android:id="@+id/detail_state_park"
            style="@style/fontStyleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_double"
            android:padding="@dimen/spacing_double"
            android:text="@{viewModel.selectedPark.short_description}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/string_park_rating"
            tools:text="Park detail goes here" />

        <TextView
            android:id="@+id/interest_highlight"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{viewModel.selectedPark.type}"
            app:layout_constraintStart_toEndOf="@+id/barrier_stats"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Interest/activity" />

        <TextView
            android:id="@+id/county_detail"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{viewModel.selectedPark.location}"
            app:layout_constraintStart_toEndOf="@+id/barrier_stats"
            app:layout_constraintTop_toBottomOf="@+id/interest_highlight"
            tools:text="County" />

        <TextView
            android:id="@+id/year_established"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{Integer.toString(viewModel.selectedPark.year_established)}"
            app:layout_constraintStart_toEndOf="@+id/barrier_stats"
            app:layout_constraintTop_toBottomOf="@+id/county_detail"
            tools:text="1800" />

        <TextView
            android:id="@+id/elevation"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{viewModel.selectedPark.elevation}"
            app:layout_constraintStart_toEndOf="@+id/barrier_stats"
            app:layout_constraintTop_toBottomOf="@+id/year_established"
            tools:text="400,000 ft." />

        <TextView
            android:id="@+id/acreage"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{viewModel.selectedPark.size}"
            app:layout_constraintStart_toEndOf="@id/barrier_stats"
            app:layout_constraintTop_toBottomOf="@+id/elevation"
            tools:text="450,000,000" />

        <TextView
            android:id="@+id/yearly_visitors"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{viewModel.selectedPark.yearly_visitors}"
            app:layout_constraintStart_toEndOf="@+id/barrier_stats"
            app:layout_constraintTop_toBottomOf="@+id/acreage"
            tools:text="470,000" />

        <TextView
            android:id="@+id/park_rating"
            style="@style/fontStyleLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@{viewModel.selectedPark.rating}"
            app:layout_constraintStart_toEndOf="@+id/barrier_stats"
            app:layout_constraintTop_toBottomOf="@+id/yearly_visitors"
            tools:text="4.75 stars / 5 stars" />

        <!--        Barriers for TextView park statistics content-->

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="string_year_established,interest_highlight,elevation,year_established,yearly_visitors,county_detail,acreage,park_rating"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="470dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_strings_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="string_known_for,string_elevation,string_year_established,string_yearly_visitors,string_county,string_acreage,string_park_rating"
            tools:layout_editor_absoluteY="406dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>